# HPC_Proyecto

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
bench/: run_cases.py
hpc_sph.egg-info/: SOURCES.txt
report/: learning_log.md
src/cpp/: bindings.cpp  kernels.cpp  kernels.h  sph_neon.cpp  sph_neon_omp.cpp  sph_scalar.cpp
src/hpc_sph.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/python/: kernels.py  run_simulation.py  sph_hashed.py  sph_naive.py
tests/: test_kernels.py
viz/: ascii_renderer.py
